{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 373,
  "lineage": "3050f582-7c4e-d2e8-140a-324e7b11c3ec",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "enpoint_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/loadBalancers/endpoint-lb/frontendIPConfigurations/enpoint_lb_pip",
                "name": "enpoint_lb_pip",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/publicIPAddresses/enpoint_lb_pip"
              }
            ],
            "id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/loadBalancers/endpoint-lb",
            "location": "australiasoutheast",
            "name": "endpoint-lb",
            "resource_group_name": "HybridNetworkSimRG",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_public_ip.endpoint_lb_pip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "web_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/loadBalancers/web_lb/frontendIPConfigurations/PublicIPAddressLB",
                "name": "PublicIPAddressLB",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/publicIPAddresses/web-lb-public-ip"
              }
            ],
            "id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/loadBalancers/web_lb",
            "location": "australiasoutheast",
            "name": "web_lb",
            "resource_group_name": "HybridNetworkSimRG",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_public_ip.lb-public-ip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "web_lb_backend_address_pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/networkInterfaces/nic_vm_webapp2/ipConfigurations/nic_vm_webapp2-configuration",
              "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/networkInterfaces/nic_vm_webapp/ipConfigurations/nic_vm_webapp-configuration"
            ],
            "id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/loadBalancers/web_lb/backendAddressPools/web-backend",
            "loadbalancer_id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/loadBalancers/web_lb",
            "name": "web-backend"
          },
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_public_ip.lb-public-ip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_vm_admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/networkInterfaces/nic_vm_admin",
            "internal_domain_name_suffix": "hgoshktznhvelg21nv2oq0kf4h.qx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "nic_vm_admin-configuration",
                "primary": true,
                "private_ip_address": "10.0.3.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/virtualNetworks/azurevnet/subnets/AdminSubnet"
              }
            ],
            "location": "australiasoutheast",
            "mac_address": "00-22-48-14-4F-8C",
            "name": "nic_vm_admin",
            "private_ip_address": "10.0.3.4",
            "private_ip_addresses": [
              "10.0.3.4"
            ],
            "resource_group_name": "HybridNetworkSimRG",
            "virtual_machine_id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Compute/virtualMachines/vm-admin"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.adminsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_vm_database",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/networkInterfaces/nic_vm_database",
            "internal_domain_name_suffix": "hgoshktznhvelg21nv2oq0kf4h.qx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "nic_vm_database-configuration",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/virtualNetworks/azurevnet/subnets/DatabaseSubnet"
              }
            ],
            "location": "australiasoutheast",
            "mac_address": "00-22-48-E2-95-27",
            "name": "nic_vm_database",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "HybridNetworkSimRG",
            "virtual_machine_id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Compute/virtualMachines/vm-dabatase"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.databasesubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_vm_webapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/networkInterfaces/nic_vm_webapp",
            "internal_domain_name_suffix": "hgoshktznhvelg21nv2oq0kf4h.qx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "nic_vm_webapp-configuration",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/virtualNetworks/azurevnet/subnets/WebAppSubnet"
              }
            ],
            "location": "australiasoutheast",
            "mac_address": "00-22-48-D3-C4-0D",
            "name": "nic_vm_webapp",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "HybridNetworkSimRG",
            "virtual_machine_id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Compute/virtualMachines/vm-webapp"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.webappsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_vm_webapp2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/networkInterfaces/nic_vm_webapp2",
            "internal_domain_name_suffix": "hgoshktznhvelg21nv2oq0kf4h.qx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "nic_vm_webapp2-configuration",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/virtualNetworks/azurevnet/subnets/WebAppSubnet"
              }
            ],
            "location": "australiasoutheast",
            "mac_address": "00-22-48-D3-B4-2D",
            "name": "nic_vm_webapp2",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "HybridNetworkSimRG",
            "virtual_machine_id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Compute/virtualMachines/vm-webapp2"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.webappsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web_lb_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/networkInterfaces/web_lb_nic",
            "internal_domain_name_suffix": "hgoshktznhvelg21nv2oq0kf4h.qx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/virtualNetworks/azurevnet/subnets/WebAppSubnet"
              }
            ],
            "location": "australiasoutheast",
            "name": "web_lb_nic",
            "private_ip_address": "10.0.1.6",
            "private_ip_addresses": [
              "10.0.1.6"
            ],
            "resource_group_name": "HybridNetworkSimRG"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.webappsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "webapp2_nic_lb_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/loadBalancers/web_lb/backendAddressPools/web-backend",
            "id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/networkInterfaces/nic_vm_webapp2/ipConfigurations/nic_vm_webapp2-configuration|/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/loadBalancers/web_lb/backendAddressPools/web-backend",
            "ip_configuration_name": "nic_vm_webapp2-configuration",
            "network_interface_id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/networkInterfaces/nic_vm_webapp2"
          },
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_lb_backend_address_pool.web_lb_backend_address_pool",
            "azurerm_network_interface.nic_vm_webapp2",
            "azurerm_public_ip.lb-public-ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.webappsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "webapp_nic_lb_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/loadBalancers/web_lb/backendAddressPools/web-backend",
            "id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/networkInterfaces/nic_vm_webapp/ipConfigurations/nic_vm_webapp-configuration|/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/loadBalancers/web_lb/backendAddressPools/web-backend",
            "ip_configuration_name": "nic_vm_webapp-configuration",
            "network_interface_id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/networkInterfaces/nic_vm_webapp"
          },
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_lb_backend_address_pool.web_lb_backend_address_pool",
            "azurerm_network_interface.nic_vm_webapp",
            "azurerm_public_ip.lb-public-ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.webappsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "subnetnsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/networkSecurityGroups/subnet-nsg",
            "location": "australiasoutheast",
            "name": "subnet-nsg",
            "resource_group_name": "HybridNetworkSimRG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "10.0.1.0/24",
                  "10.0.2.0/24",
                  "10.0.3.0/24"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Outbound_Allow_Subnet_Any",
                "priority": 500,
                "protocol": "*",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "10.0.1.0/24",
                  "10.0.2.0/24",
                  "10.0.3.0/24"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "10.0.1.0/24",
                  "10.0.2.0/24",
                  "10.0.3.0/24"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Inbound_Allow_Bastion_SSH",
                "priority": 510,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.5.0/25",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "10.0.1.0/24",
                  "10.0.2.0/24",
                  "10.0.3.0/24"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Inbound_Allow_Bastion_RDP",
                "priority": 500,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.5.0/25",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "10.0.1.0/24",
                  "10.0.2.0/24",
                  "10.0.3.0/24"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Inbound_Deny_Any_Any",
                "priority": 1000,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Outbound_Deny_Any_Any",
                "priority": 1000,
                "protocol": "*",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "10.0.1.0/24",
                  "10.0.2.0/24",
                  "10.0.3.0/24"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "webappnsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/networkSecurityGroups/webapp-nsg",
            "location": "australiasoutheast",
            "name": "webapp-nsg",
            "resource_group_name": "HybridNetworkSimRG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-HTTPS",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "inbound_allow_rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "",
            "destination_address_prefixes": [
              "10.0.1.0/24",
              "10.0.2.0/24",
              "10.0.3.0/24"
            ],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3389",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/networkSecurityGroups/subnet-nsg/securityRules/Inbound_Allow_Bastion_RDP",
            "name": "Inbound_Allow_Bastion_RDP",
            "network_security_group_name": "subnet-nsg",
            "priority": 500,
            "protocol": "Tcp",
            "resource_group_name": "HybridNetworkSimRG",
            "source_address_prefix": "10.0.5.0/25",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.subnetnsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "inbound_allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "",
            "destination_address_prefixes": [
              "10.0.1.0/24",
              "10.0.2.0/24",
              "10.0.3.0/24"
            ],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/networkSecurityGroups/subnet-nsg/securityRules/Inbound_Allow_Bastion_SSH",
            "name": "Inbound_Allow_Bastion_SSH",
            "network_security_group_name": "subnet-nsg",
            "priority": 510,
            "protocol": "Tcp",
            "resource_group_name": "HybridNetworkSimRG",
            "source_address_prefix": "10.0.5.0/25",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.subnetnsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "inbound_deny_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "",
            "destination_address_prefixes": [
              "10.0.1.0/24",
              "10.0.2.0/24",
              "10.0.3.0/24"
            ],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/networkSecurityGroups/subnet-nsg/securityRules/Inbound_Deny_Any_Any",
            "name": "Inbound_Deny_Any_Any",
            "network_security_group_name": "subnet-nsg",
            "priority": 1000,
            "protocol": "*",
            "resource_group_name": "HybridNetworkSimRG",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.subnetnsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "outbound_allow_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "",
            "destination_address_prefixes": [
              "10.0.1.0/24",
              "10.0.2.0/24",
              "10.0.3.0/24"
            ],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/networkSecurityGroups/subnet-nsg/securityRules/Outbound_Allow_Subnet_Any",
            "name": "Outbound_Allow_Subnet_Any",
            "network_security_group_name": "subnet-nsg",
            "priority": 500,
            "protocol": "*",
            "resource_group_name": "HybridNetworkSimRG",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "10.0.1.0/24",
              "10.0.2.0/24",
              "10.0.3.0/24"
            ],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.subnetnsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "outbound_deny_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/networkSecurityGroups/subnet-nsg/securityRules/Outbound_Deny_Any_Any",
            "name": "Outbound_Deny_Any_Any",
            "network_security_group_name": "subnet-nsg",
            "priority": 1000,
            "protocol": "*",
            "resource_group_name": "HybridNetworkSimRG",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "10.0.1.0/24",
              "10.0.2.0/24",
              "10.0.3.0/24"
            ],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.subnetnsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "bastion_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/publicIPAddresses/pip-bastion",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.92.44.78",
            "ip_version": "IPv4",
            "location": "australiasoutheast",
            "name": "pip-bastion",
            "resource_group_name": "HybridNetworkSimRG",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "endpoint_lb_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/publicIPAddresses/enpoint_lb_pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.92.44.65",
            "ip_version": "IPv4",
            "location": "australiasoutheast",
            "name": "enpoint_lb_pip",
            "resource_group_name": "HybridNetworkSimRG",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "lb-public-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/publicIPAddresses/web-lb-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.70.75.49",
            "ip_version": "IPv4",
            "location": "australiasoutheast",
            "name": "web-lb-public-ip",
            "resource_group_name": "HybridNetworkSimRG",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "onprem_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/publicIPAddresses/onprem_gatewaypip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.199.7.214",
            "ip_version": "IPv4",
            "location": "australiasoutheast",
            "name": "onprem_gatewaypip",
            "resource_group_name": "HybridNetworkSimRG",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/publicIPAddresses/gatewaypip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.115.91.11",
            "ip_version": "IPv4",
            "location": "australiasoutheast",
            "name": "gatewaypip",
            "resource_group_name": "HybridNetworkSimRG",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "adminsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/virtualNetworks/azurevnet/subnets/AdminSubnet",
            "name": "AdminSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "HybridNetworkSimRG",
            "virtual_network_name": "azurevnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastionsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.5.0/25"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/virtualNetworks/azurevnet/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "HybridNetworkSimRG",
            "virtual_network_name": "azurevnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "databasesubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": true,
            "id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/virtualNetworks/azurevnet/subnets/DatabaseSubnet",
            "name": "DatabaseSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": false,
            "resource_group_name": "HybridNetworkSimRG",
            "virtual_network_name": "azurevnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "vpngateway_onprem_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/virtualNetworks/onpremvnet/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "HybridNetworkSimRG",
            "virtual_network_name": "onpremvnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.onpremvnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "vpngatewaysubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.4.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/virtualNetworks/azurevnet/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "HybridNetworkSimRG",
            "virtual_network_name": "azurevnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "webappsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/virtualNetworks/azurevnet/subnets/WebAppSubnet",
            "name": "WebAppSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "HybridNetworkSimRG",
            "virtual_network_name": "azurevnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "adminsubnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/virtualNetworks/azurevnet/subnets/AdminSubnet",
            "network_security_group_id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/networkSecurityGroups/subnet-nsg",
            "subnet_id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/virtualNetworks/azurevnet/subnets/AdminSubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.subnetnsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.adminsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "databasesubnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/virtualNetworks/azurevnet/subnets/DatabaseSubnet",
            "network_security_group_id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/networkSecurityGroups/subnet-nsg",
            "subnet_id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/virtualNetworks/azurevnet/subnets/DatabaseSubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.subnetnsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.databasesubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "webappsubnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/virtualNetworks/azurevnet/subnets/WebAppSubnet",
            "network_security_group_id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/networkSecurityGroups/subnet-nsg",
            "subnet_id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/virtualNetworks/azurevnet/subnets/WebAppSubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.subnetnsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.webappsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "onpremvnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "a3afccee-98eb-4f85-9e35-af6f469a020f",
            "id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/virtualNetworks/onpremvnet",
            "location": "australiasoutheast",
            "name": "onpremvnet",
            "resource_group_name": "HybridNetworkSimRG",
            "subnet": [
              {
                "address_prefix": "10.1.1.0/24",
                "id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/virtualNetworks/onpremvnet/subnets/GatewaySubnet",
                "name": "GatewaySubnet"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "aa239d39-6979-45ea-9b9b-6d78e86945f7",
            "id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/virtualNetworks/azurevnet",
            "location": "australiasoutheast",
            "name": "azurevnet",
            "resource_group_name": "HybridNetworkSimRG",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/virtualNetworks/azurevnet/subnets/WebAppSubnet",
                "name": "WebAppSubnet",
                "security_group": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/networkSecurityGroups/subnet-nsg"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/virtualNetworks/azurevnet/subnets/DatabaseSubnet",
                "name": "DatabaseSubnet",
                "security_group": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/networkSecurityGroups/subnet-nsg"
              },
              {
                "address_prefix": "10.0.3.0/24",
                "id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/virtualNetworks/azurevnet/subnets/AdminSubnet",
                "name": "AdminSubnet",
                "security_group": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/networkSecurityGroups/subnet-nsg"
              },
              {
                "address_prefix": "10.0.4.0/24",
                "id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/virtualNetworks/azurevnet/subnets/GatewaySubnet",
                "name": "GatewaySubnet"
              },
              {
                "address_prefix": "10.0.5.0/25",
                "id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/virtualNetworks/azurevnet/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway",
      "name": "onprem_vpngateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "active_active": false,
            "bgp_route_translation_for_nat_enabled": false,
            "dns_forwarding_enabled": false,
            "enable_bgp": false,
            "generation": "Generation1",
            "id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/virtualNetworkGateways/onpremvnet_vpn_gateway",
            "ip_configuration": [
              {
                "name": "onpremGatewayConfig",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/publicIPAddresses/onprem_gatewaypip",
                "subnet_id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/virtualNetworks/onpremvnet/subnets/GatewaySubnet"
              }
            ],
            "ip_sec_replay_protection_enabled": true,
            "location": "australiasoutheast",
            "name": "onpremvnet_vpn_gateway",
            "private_ip_address_enabled": false,
            "remote_vnet_traffic_enabled": false,
            "resource_group_name": "HybridNetworkSimRG",
            "sku": "Basic",
            "type": "Vpn",
            "virtual_wan_traffic_enabled": false,
            "vpn_type": "RouteBased"
          },
          "dependencies": [
            "azurerm_public_ip.onprem_pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.vpngateway_onprem_subnet",
            "azurerm_virtual_network.onpremvnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway",
      "name": "vpngateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "active_active": false,
            "bgp_route_translation_for_nat_enabled": false,
            "dns_forwarding_enabled": false,
            "enable_bgp": false,
            "generation": "Generation1",
            "id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/virtualNetworkGateways/azurevnet_vpn_gateway",
            "ip_configuration": [
              {
                "name": "vnetGatewayConfig",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/publicIPAddresses/gatewaypip",
                "subnet_id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/virtualNetworks/azurevnet/subnets/GatewaySubnet"
              }
            ],
            "ip_sec_replay_protection_enabled": true,
            "location": "australiasoutheast",
            "name": "azurevnet_vpn_gateway",
            "private_ip_address_enabled": false,
            "remote_vnet_traffic_enabled": false,
            "resource_group_name": "HybridNetworkSimRG",
            "sku": "Basic",
            "type": "Vpn",
            "virtual_wan_traffic_enabled": false,
            "vpn_client_configuration": [
              {
                "address_space": [
                  "10.1.0.0/24"
                ],
                "vpn_client_protocols": [
                  "SSTP"
                ]
              }
            ],
            "vpn_type": "RouteBased"
          },
          "dependencies": [
            "azurerm_public_ip.pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.vpngatewaysubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway_connection",
      "name": "azure_to_onprem",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "connection_mode": "Default",
            "connection_protocol": "IKEv2",
            "dpd_timeout_seconds": 0,
            "enable_bgp": false,
            "express_route_gateway_bypass": false,
            "id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/connections/azure_to_onprem",
            "local_azure_ip_address_enabled": false,
            "location": "australiasoutheast",
            "name": "azure_to_onprem",
            "peer_virtual_network_gateway_id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/virtualNetworkGateways/onpremvnet_vpn_gateway",
            "resource_group_name": "HybridNetworkSimRG",
            "routing_weight": 0,
            "shared_key": "4-v3ry-53cr37-1p53c-5h4r3d-k3y",
            "type": "Vnet2Vnet",
            "use_policy_based_traffic_selectors": false,
            "virtual_network_gateway_id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/virtualNetworkGateways/azurevnet_vpn_gateway"
          },
          "dependencies": [
            "azurerm_public_ip.onprem_pip",
            "azurerm_public_ip.pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.vpngateway_onprem_subnet",
            "azurerm_subnet.vpngatewaysubnet",
            "azurerm_virtual_network.onpremvnet",
            "azurerm_virtual_network.vnet",
            "azurerm_virtual_network_gateway.onprem_vpngateway",
            "azurerm_virtual_network_gateway.vpngateway"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway_connection",
      "name": "onprem_to_azure",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "connection_mode": "Default",
            "connection_protocol": "IKEv2",
            "dpd_timeout_seconds": 0,
            "enable_bgp": false,
            "express_route_gateway_bypass": false,
            "id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/connections/onprem_to_azure",
            "local_azure_ip_address_enabled": false,
            "location": "australiasoutheast",
            "name": "onprem_to_azure",
            "peer_virtual_network_gateway_id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/virtualNetworkGateways/azurevnet_vpn_gateway",
            "resource_group_name": "HybridNetworkSimRG",
            "routing_weight": 0,
            "shared_key": "4-v3ry-53cr37-1p53c-5h4r3d-k3y",
            "type": "Vnet2Vnet",
            "use_policy_based_traffic_selectors": false,
            "virtual_network_gateway_id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/virtualNetworkGateways/onpremvnet_vpn_gateway"
          },
          "dependencies": [
            "azurerm_public_ip.onprem_pip",
            "azurerm_public_ip.pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.vpngateway_onprem_subnet",
            "azurerm_subnet.vpngatewaysubnet",
            "azurerm_virtual_network.onpremvnet",
            "azurerm_virtual_network.vnet",
            "azurerm_virtual_network_gateway.onprem_vpngateway",
            "azurerm_virtual_network_gateway.vpngateway"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway_connection",
      "name": "onpremise",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "connection_mode": "Default",
            "connection_protocol": "IKEv2",
            "dpd_timeout_seconds": 0,
            "enable_bgp": false,
            "express_route_gateway_bypass": false,
            "id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/connections/onpremise",
            "local_azure_ip_address_enabled": false,
            "local_network_gateway_id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/localNetworkGateways/onpremise",
            "location": "australiasoutheast",
            "name": "onpremise",
            "resource_group_name": "HybridNetworkSimRG",
            "routing_weight": 0,
            "shared_key": "4-v3ry-53cr37-1p53c-5h4r3d-k3y",
            "type": "IPsec",
            "use_policy_based_traffic_selectors": false,
            "virtual_network_gateway_id": "/subscriptions/dc3f097d-41a3-4f48-bcf6-7957cf874a41/resourceGroups/HybridNetworkSimRG/providers/Microsoft.Network/virtualNetworkGateways/azurevnet_vpn_gateway"
          },
          "dependencies": [
            "azurerm_local_network_gateway.onpremise",
            "azurerm_public_ip.pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.vpngatewaysubnet",
            "azurerm_virtual_network.vnet",
            "azurerm_virtual_network_gateway.vpngateway"
          ]
        }
      ]
    }
  ]
}